--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
     </div>
   
 <audio id="audioPlayer" loop>
-  <source src="./audio/audio1.mp3" type="audio/mpeg" />
+  <source src="./audio/oshgamarhamat.mp3" type="audio/mpeg" />
 </audio>
 
-<button id="playPauseBtn">▶ Play</button>
-
+<div class="music-control">
+  <div id="equalizer" class="equalizer hidden">
+    <span></span><span></span><span></span><span></span>
+  </div>
+  <button id="playPauseBtn">▶ Play</button>
+</div>
 
     <script src="js/script.js"></script>
 </body>
