--- a/index.html
+++ b/index.html
@@ -28,35 +28,34 @@
     </div>
 
     <div class="card">
-      <p class="fade-text delay-1">Bismillahir rohmanir rohiym</p>
-      <p class="fade-text delay-2"><em>Assalomu alaykum aziz mehmonimiz</em></p>
+      <p class="fade-text delay-1">Bismillahir Rohmanir Rohiym.</p>
+      <p class="fade-text delay-2"><em>Assalomu alaykum, aziz mehmonimiz!</em></p>
       <p class="fade-text delay-2">Behruzbekning to'yi munosabati bilan!</p>
-      <p class="fade-text delay-3">Sizni chin dildan ertalabki nohorga — amru-marif oshiga mehmon bo‘lishga taklif
-        qilamiz. Bu osh
-        niyat bilan, Alloh rizoligi yo‘lida, siz azizlar bilan birga bo‘lish umidida tayyorlanadi.</p>
+      <p class="fade-text delay-3">sizni chin dildan ertalabki nahorga — amri-ma’ruf oshiga mehmon bo‘lishga taklif
+        qilamiz. Bu osh niyyat bilan, Alloh rizoligi yo‘lida, siz azizlar bilan birga bo‘lish umidida tayyorlanadi.</p>
 
       <h2 class="couple-names delay-4">Soatovlar OILASI</h2>
       <!-- <p class="fade-text delay-5">SHARIPOVLAR OILASI</p> -->
 
       <div class="event-details delay-6">
-        <p><strong>7 August 2025</strong></p>
+        <p><strong>07.08.2025 </strong></p>
         <p>Bektemir tumani, "Majnuntol mahallasi", Soatovlar xonadoni</p>
         <p>soat: 07:00</p>
       </div>
       <a href="https://maps.app.goo.gl/eBcm7qQxQqPuV5dh9" target="_blank" class="map-btn delay-7">📍 Manzilni
         ko'rish</a>
     </div>
-  
-<audio id="audioPlayer" loop>
-  <source src="./audio/oshgamarhamat.mp3" type="audio/mpeg" />
-</audio>
 
-<div class="music-control">
-  <div id="equalizer" class="equalizer hidden">
-    <span></span><span></span><span></span><span></span>
-  </div>
-  <button id="playPauseBtn">▶ Play</button>
-</div>
+    <audio id="audioPlayer" loop>
+      <source src="./audio/oshgamarhamat.mp3" type="audio/mpeg" />
+    </audio>
+
+    <div class="music-control">
+      <div id="equalizer" class="equalizer hidden">
+        <span></span><span></span><span></span><span></span>
+      </div>
+      <button id="playPauseBtn">▶ Play</button>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
