--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="card">
       <p class="fade-text delay-1">Bismillahir Rohmanir Rohiym.</p>
       <p class="fade-text delay-2"><em>Assalomu alaykum, aziz mehmonimiz!</em></p>
-      <p class="fade-text delay-2">Behruzbekning to'yi munosabati bilan,</p>
-      <p class="fade-text delay-3">sizni chin dildan ertalabki nahorga — amri-ma’ruf oshiga mehmon bo‘lishga taklif
+      <!-- <p class="fade-text delay-2">Behruzbekning to'yi munosabati bilan,</p> -->
+      <p class="fade-text delay-3">Behruzbekning to'yi munosabati bilan,sizni chin dildan ertalabki nahorga — amri-ma’ruf oshiga mehmon bo‘lishga taklif
         qilamiz. Bu osh niyyat bilan, Alloh rizoligi yo‘lida, siz azizlar bilan birga bo‘lish umidida tayyorlanadi.</p>
 
       <h2 class="couple-names delay-4">Soatovlar OILASI</h2>
